--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
-    "kafkajs": "^2.2.3"
+    "kafkajs": "^2.2.3",
+    "protobufjs": "^7.1.2"
   },
   "devDependencies": {
     "electron": "^20.1.0",
