--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:linux": "nextron build --linux"
   },
   "dependencies": {
+    "dmg-license": "^1.0.11",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "kafkajs": "^2.2.3"
