--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "name": "kafka-monitor",
   "description": "A tool to monitoring multiples kafka topic at the same time.",
-  "version": "0.0.1",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "version": "1.0.0",
+  "author": "Daniel Perez <github.com/danielpp95>",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
@@ -16,17 +16,17 @@
     "build:linux": "nextron build --linux"
   },
   "dependencies": {
-    "dmg-license": "^1.0.11",
-    "electron-serve": "^1.1.0",
-    "electron-store": "^8.1.0",
-    "kafkajs": "^2.2.3"
+    "dmg-license": "1.0.11",
+    "electron-serve": "1.1.0",
+    "electron-store": "8.1.0",
+    "kafkajs": "2.2.3"
   },
   "devDependencies": {
-    "electron": "^20.1.0",
-    "electron-builder": "^23.3.3",
-    "next": "^12.2.5",
-    "nextron": "^8.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "electron": "20.1.0",
+    "electron-builder": "23.3.3",
+    "next": "12.2.5",
+    "nextron": "8.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
